--- a/package.json
+++ b/package.json
@@ -8,11 +8,14 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@types/react": "^16.9.17",
+    "@types/react-dom": "^16.9.4",
+    "@types/react-native": "^0.60.27",
     "expo": "~36.0.0",
-    "react": "~16.9.0",
-    "react-dom": "~16.9.0",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
-    "react-native-web": "~0.11.7"
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
+    "react-native": "^0.61.5",
+    "react-native-web": "^0.12.0-rc.1"
   },
   "devDependencies": {
     "babel-preset-expo": "~8.0.0",
