--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-native": "^0.61.5",
-    "react-native-web": "^0.12.0-rc.1"
+    "react-native-web": "^0.12.0-rc.1",
+    "expo-font": "~8.0.0"
   },
   "devDependencies": {
     "babel-preset-expo": "~8.0.0",
