--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
     "@types/react-dom": "^16.9.4",
     "@types/react-native": "^0.60.27",
     "expo": "~36.0.0",
+    "expo-font": "~8.0.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-native": "^0.61.5",
     "react-native-web": "^0.12.0-rc.1",
-    "expo-font": "~8.0.0"
+    "react-navigation": "^4.0.10",
+    "react-native-gesture-handler": "~1.5.0",
+    "react-native-reanimated": "~1.4.0"
   },
   "devDependencies": {
     "babel-preset-expo": "~8.0.0",
