--- a/package.json
+++ b/package.json
@@ -16,10 +16,11 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-native": "^0.61.5",
+    "react-native-gesture-handler": "~1.5.0",
+    "react-native-reanimated": "~1.4.0",
     "react-native-web": "^0.12.0-rc.1",
     "react-navigation": "^4.0.10",
-    "react-native-gesture-handler": "~1.5.0",
-    "react-native-reanimated": "~1.4.0"
+    "react-navigation-stack": "^1.10.3"
   },
   "devDependencies": {
     "babel-preset-expo": "~8.0.0",
