--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-native": "^0.61.5",
     "react-native-gesture-handler": "~1.5.0",
     "react-native-reanimated": "~1.4.0",
+    "react-native-screens": "^2.0.0-alpha.22",
     "react-native-web": "^0.12.0-rc.1",
     "react-navigation": "^4.0.10",
     "react-navigation-stack": "^1.10.3"
