--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@expo/vector-icons": "^10.0.6",
     "@types/react": "^16.9.17",
     "@types/react-dom": "^16.9.4",
     "@types/react-native": "^0.60.27",
@@ -21,6 +22,7 @@
     "react-native-screens": "^2.0.0-alpha.22",
     "react-native-web": "^0.12.0-rc.1",
     "react-navigation": "^4.0.10",
+    "react-navigation-header-buttons": "^3.0.4",
     "react-navigation-stack": "^1.10.3"
   },
   "devDependencies": {
