--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
     "react-dom": "^16.12.0",
     "react-native": "^0.61.5",
     "react-native-gesture-handler": "~1.5.0",
+    "react-native-paper": "^3.4.0",
     "react-native-reanimated": "~1.4.0",
-    "react-native-screens": "^2.0.0-alpha.22",
+    "react-native-screens": "2.0.0-alpha.12",
     "react-native-web": "^0.12.0-rc.1",
     "react-navigation": "^4.0.10",
     "react-navigation-header-buttons": "^3.0.4",
+    "react-navigation-material-bottom-tabs": "^2.1.5",
     "react-navigation-stack": "^1.10.3",
     "react-navigation-tabs": "^2.6.2"
   },
