--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-native-screens": "2.0.0-alpha.12",
     "react-native-web": "^0.12.0-rc.1",
     "react-navigation": "^4.0.10",
+    "react-navigation-drawer": "^2.3.3",
     "react-navigation-header-buttons": "^3.0.4",
     "react-navigation-material-bottom-tabs": "^2.1.5",
     "react-navigation-stack": "^1.10.3",
